# faceRecog

./: CMakeLists.txt
recognizer/: CMakeLists.txt  ada.txt  main.cpp  pre_process.h
trainer/: CMakeLists.txt  main.cpp  pre_process.h  threshold.h
trainer_ada/: CMakeLists.txt  main.cpp  my_draw.h  pre_process.h  threshold.h
